manifests/infrastructure/traefik/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-dashboard
    namespace: traefik
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host("traefik.mikolajmaciejak.dev")
          kind: Rule
          services:
              - name: api@internal
                kind: TraefikService
